Correct hover on buttons

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 						</div>
 						
 						<div id="buttons">	
-								<input type="submit" value="Pesquisa Google">
-								<input type="submit" value="Estou com sorte">
+								<input id="pesquisa" type="submit" value="Pesquisa Google">
+								<input id="lucky" type="submit" value="Estou com sorte">
 						</div>
 						
 					</form>
